// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return ExpenseSummary with expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     
    expenses
     totalling 
    $44.00
  </h3>
</div>
`;

exports[`should return ExpenseSummary without expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h3>
</div>
`;
